# Jack-Shooter

./: CMakeLists.txt  config.txt  run.bat
include/: AssetManager.hpp  Components.hpp  Configuration.hpp  Entity.hpp  EntityManager.hpp  Game.hpp  GameAssets.hpp  GlobalFunc.hpp  InputHandler.hpp  SoundManager.hpp  main.hpp
src/: assetManager.cpp  configuration.cpp  entity.cpp  entityManager.cpp  game.cpp  gameAssets.cpp  globalFunc.cpp  inputHandler.cpp  main.cpp  soundManager.cpp
